--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@jeremyckahn/minami": "^1.3.1",
+    "ajv": "^6.0.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
