--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.19",
     "concurrently": "^3.5.0",
+    "css-loader": "^0.28.11",
     "gh-pages": "^1.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "jsdoc": "^3.5.5",
     "karma": "^2.0.0",
     "karma-babel-preprocessor": "^7.0.0",
@@ -38,11 +40,21 @@
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^3.0.0",
     "live-server": "^1.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "mocha": "^5.1.1",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.17.3",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-loader": "^2.1.5",
+    "precss": "^3.1.2",
     "prettier": "^1.12.1",
-    "webpack": "^4.5.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.1"
   }
 }
