--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "doc:view": "live-server dist/doc --port=9124",
     "doc:watch": "nodemon --exec \"npm run doc\" --watch src --watch ./ --ext js,md --ignore dist",
     "doc:live": "concurrently --kill-others \"npm run doc:watch\" \"npm run doc:view\"",
-    "deploy": "npm run build && git commit -am \"update\" && git push"
+    "deploy": "npm run build && git commit -am \"new update\" && git push",
+    "deploy:all": "npm run build && gh-pages -d dist"
+
   },
   "author": "Jeremy Kahn <jeremyckahn@gmail.com>",
   "license": "MIT",
